--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "@tweenjs/tween.js": "^23.1.1",
     "core-js": "^3.34.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
