--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fps-game",
   "version": "0.4.10",
   "description": "Three.jsフレームワークを用いたFPSゲームのデモ",
-  "main": "./src/js/index.js",
+  "main": "./dist/index.html",
   "author": "masa <wizcode.jp@gmail.com>",
   "license": "MIT",
   "scripts": {
