--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint './src/**/*' -c ./.eslintrc.json --fix",
     "build": "webpack --mode production",
     "test": "jest",
-    "start": "http-server ./dist"
+    "start": "serve ./dist"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
@@ -29,7 +29,6 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.4",
-    "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "prettier": "^3.1.1",
     "terser-webpack-plugin": "^5.3.9",
@@ -49,6 +48,7 @@
     "react-redux": "^9.0.4",
     "redux": "^5.0.0",
     "regenerator-runtime": "^0.14.1",
+    "serve": "^14.2.1",
     "three": "^0.160.0",
     "throttle-debounce": "^5.0.0"
   }
