--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@mui/material": "^5.15.0",
     "@pixiv/three-vrm": "^2.1.1",
     "@pixiv/three-vrm-animation": "^2.1.1",
-    "@reduxjs/toolkit": "^2.0.1",
+    "@reduxjs/toolkit": "^2.2.1",
     "@tweenjs/tween.js": "^23.1.1",
     "core-js": "^3.34.0",
     "express": "^4.18.3",
@@ -51,7 +51,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
-    "redux": "^5.0.0",
+    "react-router-dom": "^6.22.3",
     "regenerator-runtime": "^0.14.1",
     "serve-favicon": "^2.5.0",
     "three": "^0.160.0",
