--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fps-game",
-  "version": "0.8.0",
-  "description": "Three.jsフレームワークを用いたFPSゲームのデモ",
+  "name": "cross-star-island",
+  "version": "0.8.1",
+  "description": "Three.jsフレームワークを用いたFPSゲーム",
   "main": "./dist/client/index.html",
   "author": "masa <wizcode.jp@gmail.com>",
   "license": "MIT",
